Products API: delete, getById, patch. Some of them was added to frontend.
